test/good/functions/var2.px

func id(Int x) Int def
    print("id")
    return x

func id'(Int x) Int def
    print("id'")
    return x

id = id'
id' = id
print id(5)
