test/bad/functions/call1.px

func f(Int x) Bool def
    return x == x

func main() Int def
    f("3")
    return 0
